--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Tutorify</title>
   </head>
-  <body>
-    <h1>Hello new project</h1>
-  </body>
+  <body class="bg-[#E5E5E5]"></body>
 </html>
