nav bar for desktop view

--- a/index.html
+++ b/index.html
@@ -7,5 +7,45 @@
     <link rel="stylesheet" href="style.css" />
     <title>Tutorify</title>
   </head>
-  <body class="bg-[#E5E5E5]"></body>
+  <body class="bg-[#E5E5E5]">
+    <nav>
+      <div
+        class="p-3 px-0 mx-15 flex justify-between items-center text-gray-900 border-b-1 border-gray-300"
+      >
+        <a href="/home" class="p-2 pl-0 font-bold">Tutorify</a>
+        <div class="flex gap-8 items-center">
+          <a
+            href="#"
+            class="py-2 hover:underline underline-offset-8 hover:text-orange-400"
+            >Home</a
+          >
+          <a
+            href="#"
+            class="py-2 hover:underline underline-offset-8 hover:text-orange-400"
+            >Lessons</a
+          >
+          <a
+            href="#"
+            class="py-2 hover:underline underline-offset-8 hover:text-orange-400"
+            >Find Tutors</a
+          >
+          <a
+            href="#"
+            class="py-2 hover:underline underline-offset-8 hover:text-orange-400"
+            >About Us</a
+          >
+          <a
+            href="#"
+            class="p-1 bg-green-700 hover:bg-green-800 text-[#E5E5E5] rounded-md w-22 text-center"
+            >Login</a
+          >
+          <a
+            href="#"
+            class="p-1 text-[#E5E5E5] bg-orange-400 hover:bg-orange-500 rounded-md w-22 text-center"
+            >Sign Up</a
+          >
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
